--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "cross-env NODE_ENV=development node server.js",
     "dev": "ts-node server.ts",
     "debug": "ts-node --inspect-brk server.ts",
     "serve": "cross-env NODE_ENV=production ts-node server.ts ",
