--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,13 @@ jobs:
     steps:
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  
+      - 
+        name: Install dependencies
+        run: npm install
+      - 
+        name: Run npm build script
+        run: npm run build
       -
         name: Docker meta
         id: docker_meta
