--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_ENV=development node server.js",
+    "test2": "cross-env NODE_ENV=production node server.js ",
     "dev": "ts-node server.ts",
     "debug": "ts-node --inspect-brk server.ts",
     "serve": "cross-env NODE_ENV=production ts-node server.ts ",
@@ -17,6 +18,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "pinia": "^2.1.6",
+    "sirv": "^2.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
